# agent-self-evolution

./: .gitignore  AGENTS.md  PLAN.md  README.md  generate_report.py  pyproject.toml
.github/workflows/: tests.yml
docs/: architecture.md  codebase_info.md  components.md  data_models.md  dependencies.md  framework_advantages.md  index.md  interfaces.md  recent_changes.md  review_notes.md  workflows.md
docs/research/: knee_point_analysis.md
evolution/: __init__.py
evolution/core/: __init__.py  config.py  constraints.py  dataset_builder.py  external_importers.py  fitness.py  lm_timing_callback.py  skill_sources.py  stats.py
evolution/skills/: budget_aware_proposer.py  evolve_skill.py  knee_point.py  skill_module.py
experiments/: 2026-04-30-multi-seed-noise-floor.md
forge/: __init__.py
forge/core/: __init__.py  config.py  constraints.py  dataset_builder.py  fitness.py
forge/skills/: evolve_skill.py
reports/: phase1_prose.yaml
tests/core/: test_constraints.py  test_dataset_builder.py  test_external_importers.py  test_fitness.py  test_lm_timing_callback.py  test_skill_sources.py  test_stats.py
tests/skills/: test_budget_aware_proposer.py  test_evolve_skill_helpers.py  test_evolve_skill_validation_flow.py  test_knee_point.py  test_skill_module.py
