[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-forge"
version = "0.1.0"
description = "Evolutionary self-improvement for Hermes Agent — optimize skills, prompts, tool descriptions, and code using DSPy + GEPA"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Nous Research", email = "team@nousresearch.com"},
]
keywords = ["llm", "optimization", "evolution", "dspy", "gepa", "hermes", "agent"]

dependencies = [
    "dspy>=3.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
darwinian = [
    "darwinian-evolver",
]

[project.urls]
Homepage = "https://github.com/NousResearch/hermes-forge"
Repository = "https://github.com/NousResearch/hermes-forge"

[tool.setuptools.packages.find]
include = ["forge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
