[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-self-evolution"
version = "0.1.0"
description = "Evolutionary self-improvement for agent skills — optimize skills, prompts, tool descriptions, and code using DSPy + GEPA"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "jramos"},
]
keywords = ["llm", "optimization", "evolution", "dspy", "gepa", "agent", "skill"]

dependencies = [
    "dspy>=3.2.0,<3.3",
    # Pinned because lm_timing_callback.py uses litellm.failure_callback
    # (a module-level list mutation API) and dspy.LM forwards
    # request_timeout/num_retries to litellm. Both are stable at 1.82
    # but not marked as public, so a future minor bump could move them.
    "litellm>=1.82.0,<2.0",
    "openai>=1.0.0",
    "click>=8.0",
    "rich>=13.0",
    "reportlab>=4.0",
    # Used by stats.paired_bootstrap. Floor predates the 2.0 ABI break;
    # no upper bound — only stable np.array/np.percentile/np.random APIs.
    "numpy>=1.24",
    # Used by generate_report.py to load reports/<phase>_prose.yaml.
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
miprov2 = [
    "dspy[optuna]>=3.2.0,<3.3",
]
darwinian = [
    "darwinian-evolver",
]

[project.urls]
Homepage = "https://github.com/jramos/agent-self-evolution"
Repository = "https://github.com/jramos/agent-self-evolution"

[tool.setuptools.packages.find]
include = ["evolution*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
